--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@vue/cli-plugin-pwa": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
+    "fasquest": "^1.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "sass": "^1.17.4",
