--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "rip": "node --inspect rip.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
@@ -16,10 +17,12 @@
     "@vue/cli-plugin-pwa": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "fasquest": "^1.2.2",
+    "jsdom": "^15.2.1",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "sass": "^1.17.4",
     "sass-loader": "^7.1.0",
+    "striptags": "^3.1.1",
     "vue-cli-plugin-vuetify": "^1.0.1",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.2.2"
