--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@vue/cli-plugin-pwa": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "fasquest": "^1.2.2",
+    "html-dom-parser": "^0.2.3",
+    "htmlparser2": "^4.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "sass": "^1.17.4",
